--- a/styles.css
+++ b/styles.css
@@ -25,14 +25,16 @@ nav{
 nav a{
   text-decoration: none;
   color: black;
+  font-size: 1.25vh;
 }
 
 #post{
   text-align: center;
   border-style: solid;
-  border-width: 1.5px;
-  margin-right: 24%;
-  margin-left: 24%;
+  border-width: .15vh;
+  margin-left: 30vh;
+  margin-right: 25vh;
+  height: 31vw;
   margin-top: 3%;
   margin-bottom: 0;
   background-color: white; 
@@ -41,18 +43,16 @@ nav a{
 }
 
 #det{
-  margin-left: 13%;
-  margin-right: 0;
+  margin-left: 16vh;
   margin-top: 4%;
   float: left;
-  font-size: 90%;
-  border-style: slid;
-  border-radius: 8px;
-  border-width: 1.5px;
+  font-size: 1.15vh;
   width: 10%;
   text-align: left;
   padding-left: .5%;
   color: gray;
+  display: block
+  
 }
 
 #wpost{
@@ -62,7 +62,7 @@ nav a{
 
 
 h1{
-  font-size: 280%;
+  font-size: 3.7vh;
   margin-bottom: 2.5%;
 }
 
@@ -73,15 +73,14 @@ h1{
 p{
   margin-left: 12%;
   margin-right: 12%;
-  font-size: 110%
+  font-size: 1.4vh;
 }
 
-#arw{
-  height: 55px;
-}
 
 #arw img{
-  margin-top: -6%;
+  margin-top: -5%;
+  width: 15%;
+  height: 15%;
 }
 
 #post a{
@@ -103,10 +102,12 @@ p{
 #logo{
   text-align: center;
   margin-bottom: 0;
+  
 }
 
 #logo img{
-  margin-bottom: 0;
+  width: 25%;
+  height: 25%;
 }
 
 
