--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body{
   margin-right: 0;
   margin-left: 0;
   height: 100%;
+  width: 100%;
 }
 
 html{
@@ -16,8 +17,8 @@ html{
 nav{
   display: flex;
   justify-content: space-between;
-  margin-right: 35%;
-  margin-left: 35%;
+  margin-right: 18vw;
+  margin-left: 18vw;
   padding-top: .6%;
   margin-top: 0;
 } 
@@ -25,7 +26,7 @@ nav{
 nav a{
   text-decoration: none;
   color: black;
-  font-size: 1.25vh;
+  font-size: 1.2em;
 }
 
 #post{
