--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,52 @@
 body{
   background-color: gray;
   font-family: 'Questrial', sans-serif;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-right: 0;
-  margin-left: 0;
-  height: 100%;
-  width: 100%;
+  margin: auto;
+
 }
 
 html{
   margin-bottom: 0;
-  height: 100%;
 }
+
 
 nav{
   display: flex;
-  justify-content: space-between;
-  margin-right: 18vw;
-  margin-left: 18vw;
+  justify-content: center;
   padding-top: .6%;
-  margin-top: 0;
+  margin: auto 0;
+
 } 
+
 
 nav a{
   text-decoration: none;
   color: black;
-  font-size: 1.2em;
+  font-size: 1.3vw;
+  margin-right: 3.5vw;
+  margin-left: 3.5vw;
+
+}
+
+@media screen and (min-width: 1921px) {
+  nav a{
+    font-size: 1vw;
+  }
+}
+
+
+#wpost{
+  display: flex;
+  justify-content: space-between;
+ 
 }
 
 #post{
   text-align: center;
   border-style: solid;
-  border-width: .15vh;
-  margin-left: 30vh;
-  margin-right: 25vh;
-  height: 31vw;
+  border-width: .09vw;
+  margin-right: 10vw;
+  height: 65vh;
   margin-top: 3%;
   margin-bottom: 0;
   background-color: white; 
@@ -44,26 +55,35 @@ nav a{
 }
 
 #det{
-  margin-left: 16vh;
+  margin-left: 8vw;
   margin-top: 4%;
+  margin-right: 2vw;
   float: left;
-  font-size: 1.15vh;
+  font-size: 90%;
   width: 10%;
   text-align: left;
   padding-left: .5%;
   color: gray;
-  display: block
   
 }
 
-#wpost{
-  display: inline;
- 
+/*  also above used to be .7vw
+
+@media screen and (max-width: 1919px) {
+
+  #det{
+    font-size: 2vw;
+  }
+  
 }
+
+*/
+
+
 
 
 h1{
-  font-size: 3.7vh;
+  font-size: 270%;
   margin-bottom: 2.5%;
 }
 
@@ -100,15 +120,16 @@ p{
   margin-top: 2%;
 }
 
+/*for centering logo at top*/
 #logo{
   text-align: center;
   margin-bottom: 0;
-  
 }
 
+/*for sizing of top logo*/
 #logo img{
-  width: 25%;
-  height: 25%;
+  width: 39%;
+  max-width: 435px;
 }
 
 
