--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ nav{
   padding-top: .6%;
   margin: auto 0;
 
-} 
+}
 
 
 nav a{
@@ -38,33 +38,34 @@ nav a{
 #wpost{
   display: flex;
   justify-content: space-between;
- 
+  
 }
 
 #post{
   text-align: center;
   border-style: solid;
   border-width: .09vw;
-  margin-right: 10vw;
-  height: 65vh;
+  margin-right: 18%;
+
   margin-top: 3%;
   margin-bottom: 0;
-  background-color: white; 
+  background-color: white;
   border-radius: 8px;
   box-shadow: 10px 5px 15px grey;
+  width: 57%;
 }
 
 #det{
   margin-left: 8vw;
   margin-top: 4%;
-  margin-right: 2vw;
+
   float: left;
   font-size: 90%;
   width: 10%;
   text-align: left;
   padding-left: .5%;
   color: gray;
-  
+
 }
 
 /*  also above used to be .7vw
@@ -74,7 +75,7 @@ nav a{
   #det{
     font-size: 2vw;
   }
-  
+
 }
 
 */
@@ -94,14 +95,15 @@ h1{
 p{
   margin-left: 12%;
   margin-right: 12%;
-  font-size: 1.4vh;
+  font-size: 95%;
 }
 
 
 #arw img{
-  margin-top: -5%;
-  width: 15%;
-  height: 15%;
+  margin-top: 1%;
+  margin-bottom: 2%;
+  width: 8%;
+  height: 8%;
 }
 
 #post a{
@@ -152,6 +154,3 @@ hr{
   text-decoration: none;
   color: gray;
 }
-
-
-
