Making new resolution changes work on articles

--- a/about.css
+++ b/about.css
@@ -2,11 +2,16 @@
   border-radius: 360px;
   margin: auto;
   display: block
-  
+
 }
 
 #abt{
-  border-style: solid;
   width: 45%;
   height: 10%;
+  margin: auto;
+  margin-top: 2%;
+}
+
+h2{
+  text-align: center;
 }
