--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 body{
   background-color: white;
-  font-family: 'Questrial', sans-serif;
+  /*font-family: 'Questrial', sans-serif; */
+  font-family: none;
   margin: auto;
+
 
 }
 
@@ -49,9 +51,9 @@ nav a{
 }
 
 
-hr{
+#hr1 hr{
   height: 1px;
-  width: 80%;
+  width: 100%;
   border-color: black;
   margin-top: 1%;
 }
@@ -62,8 +64,119 @@ hr{
   margin-left: 15%;
   background-color: white;
   margin-bottom: 4%;
+  height: 2000px;
 }
 
 
 
 /*post stuff*/
+
+#post{
+  margin-left: 2%;
+  width: 1000px;
+  margin-right: 0;
+
+}
+
+#post h1{
+  text-align: center;
+  font-size: 38px;
+  margin-bottom: 1%;
+
+}
+
+p{
+  text-align: center;
+  font-size: 18px;
+}
+
+#hr2 hr{
+  width: 950px;
+
+}
+
+
+#extra{
+    border-left: 1px solid ;
+    height: 1500px;
+    margin-left: 64%;
+    margin-top: -39.3%;
+    margin-right: 2%;
+
+}
+
+#bio h1{
+
+}
+
+#bio{
+  border-style: solid;
+  border-width: 1px;
+  margin-left: 7%;
+  margin-left: 15%;
+}
+
+#bio img{
+  border-radius: 360px;
+  width: 35%;
+  margin: 0 auto;
+  display: block;
+  margin-top: 3%;
+}
+
+#bio h1{
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+#bio p{
+  padding: 0px 40px;
+  margin-top: 0;
+  font-size: 18px;
+  margin-bottom: 3%;
+}
+
+#archive{
+  border-style: solid;
+  border-width: 1px;
+  margin-left: 15%;
+  margin-top: 10%;
+  height: 20%;
+}
+
+#archive h1{
+  text-align: center;
+  margin-left: 5%;
+}
+
+#leftd{
+  float: left;
+  margin-left: 10%;
+}
+
+#rightd{
+  float: right;
+  margin-right: 10%;
+}
+
+#archive h2{
+  margin-top: 16%;
+  color: gray;
+}
+
+
+
+#date{
+  position: absolute;
+  margin-left: 43.2%;
+  margin-right: 0;
+  margin-top: -16%;
+
+}
+
+#arw{
+  position: absolute;
+  margin-left: 43.8%;
+  margin-right: 0;
+  margin-top: 0%;
+}
